--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@
     background-color: #e67e22;
 }
 
+.bg-color-contact {
+    background-color: #fff;
+}
+
 .ui-menu-color-resume {
     background-color: #9b59b6;
 }
@@ -31,7 +35,7 @@
 }
 
 .bg-color-work-history {
-     background-color: #9b59b6;
+    background-color: #9b59b6;
 }
 
 /*------------------------------------------------------ special paddings/margins/text */
@@ -224,7 +228,7 @@ footer {
 
 .three-reasons-icon {
     font-size: 26px;
-    color:#e67e22;
+    color: #e67e22;
 }
 
 .three-reasons-heading {
@@ -278,7 +282,7 @@ footer {
     position: absolute;
     left: 0px;
     font-weight: 400;
-    padding:3px 30px 2px 10px;
+    padding: 3px 30px 2px 10px;
     color: #fafafa;
     background-color: rgba(25, 25, 25, 0.2);
 }
@@ -312,7 +316,7 @@ footer {
     left: 2.5em;
     top: 3em;
     display: block;
-    font-family: "Exo" , sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 500;
     font-size: 0.8em;
     padding: 0;
@@ -333,4 +337,37 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/*------------------------------------------------------ Contact Form*/
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+/*------------------------------------------------------ Media Queries*/
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
